--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 80vh;
   background-color: palegoldenrod;
-  padding: 20px;
+  padding: 10px;
 }
 
 table {
@@ -48,7 +48,7 @@ h2 {
   font-size: 70px;
   color: saddlebrown;
   transition: text-decoration 0.3s ease-in-out, color 0.3s ease-in-out;
-  margin-top: -20px;
+  margin-top: 20px;
 }
 
 h2:hover {
@@ -56,8 +56,35 @@ h2:hover {
   color: rgb(212, 96, 12);
 }
 
-
 h2 > img:hover {
-    transition: text-decoration 0.3s ease-in-out, color 0.3s ease-in-out;
-    cursor: pointer;
+  transition: text-decoration 0.3s ease-in-out, color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #111111;
+  width: 100%;
+  border-radius: 5px;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+  border-radius: 5px;
+  color: magenta;
 }
